--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pywin32 = "^306"
+requests = "^2.31.0"
+pyyaml = "^6.0.1"
+appdirs = "^1.4.4"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -17,6 +21,8 @@ pylint = "^3.1.0"
 pytest = "^8.1.1"
 isort = "^5.13.2"
 pydantic = "^2.7.0"
+types-pyyaml = "^6.0.12.20240311"
+types-requests = "^2.31.0.20240406"
 
 [build-system]
 requires = ["poetry-core"]
